--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,10 +13,11 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           cd fe
-          docker build -t itfn:fe:prod .
+          docker build -t itfn-fe:prod .
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_IT_INTERNSHIP_NAVIGATOR }}"
           channelId: live
           projectId: it-internship-navigator
+          entryPoint: ./fe
