--- a/fe/package.json
+++ b/fe/package.json
@@ -11,10 +11,13 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "node-sass": "^6.0.1",
+    "panzoom": "^9.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-fontawesome": "^1.7.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-zoom-pan-pinch": "^2.1.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
