--- a/be/Dockerfile
+++ b/be/Dockerfile
@@ -1,18 +1,20 @@
-FROM ubuntu:16.04
+FROM ubuntu:latest
 
 RUN apt-get update -y && \
-    apt-get install -y python-pip python-dev
+    apt-get install -y python3.6 && \
+    apt-get install -y python3-pip && \
+    apt-get install -y python3-flask 
 
 # We copy just the requirements.txt first to leverage Docker cache
 COPY ./requirements.txt /app/requirements.txt
 
 WORKDIR /app
 
-RUN pip install -r requirements.txt
+RUN pip3 install -r requirements.txt
 
 COPY . /app
 
-ENTRYPOINT [ "python" ]
+ENTRYPOINT ["python3"]
 
 EXPOSE 8080
 
