--- a/.github/workflows/firebase-hosting-merge-be.yml
+++ b/.github/workflows/firebase-hosting-merge-be.yml
@@ -9,12 +9,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          cd fe
-          docker build -t itfn-fe:prod .
+          cd be
+          docker build -t itfn-be:prod .
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_IT_INTERNSHIP_NAVIGATOR }}"
           channelId: live
-          projectId: it-internship-navigator
-          entryPoint: ./fe
+          projectId: itifn-api
+          entryPoint: ./be
