--- a/fe/package.json
+++ b/fe/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.14.5"
+    "@babel/preset-react": "^7.14.5",
+    "env-cmd": "^10.1.0"
   }
 }
