--- a/fe/package.json
+++ b/fe/package.json
@@ -6,6 +6,7 @@
     "@babel/preset-react"
   ],
   "dependencies": {
+    "@sasza/react-panzoom": "^1.2.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
