--- a/fe/package.json
+++ b/fe/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
