--- a/be/Dockerfile
+++ b/be/Dockerfile
@@ -3,7 +3,9 @@ FROM ubuntu:latest
 RUN apt-get update -y && \
     apt-get install -y python3.6 && \
     apt-get install -y python3-pip && \
-    apt-get install -y python3-flask 
+    apt-get install -y python3-flask && \
+    apt-get install -y build-essential && \
+    apt-get install -y libffi-dev
 
 # We copy just the requirements.txt first to leverage Docker cache
 COPY ./requirements.txt /app/requirements.txt
