--- a/fe/.env.production
+++ b/fe/.env.production
@@ -1,3 +1,3 @@
 
 REACT_APP_ENV=prod
-REACT_APP_ITIFN_API=https://api.itfnavigator.com
+REACT_APP_ITIFN_API=https://api.itfnavigator.com/api/navigator
