working first part of login flow

--- a/fe/.env.development
+++ b/fe/.env.development
@@ -1,3 +1,4 @@
 
 REACT_APP_ENV=DEV
-REACT_APP_ITIFN_API=http://localhost:8080/api/navigator
+REACT_APP_ITIFN_API=http://127.0.0.1:8080/api/navigator
+REACT_APP_ITIFN_URL=http://127.0.0.1:3000
