--- a/fe/package.json
+++ b/fe/package.json
@@ -26,7 +26,7 @@
     "react-bootstrap": "^2.0.3",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
-    "react-fontawesome": "^1.7.1
+    "react-fontawesome": "^1.7.1",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
