--- a/fe/package.json
+++ b/fe/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-to-print": "^2.14.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
