--- a/fe/package.json
+++ b/fe/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^2.0.3",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-easy-panzoom": "^0.4.4",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
